samples/o4-mini/cmdassets/tool-result-20250416-183021-vjt5js.txt
11:59:43 PM [vite] Internal server error: Failed to load PostCSS config (searchPath: /private/tmp/app-react-vite-91cz): [ReferenceError] module is not defined i
n ES module scope
This file is being treated as an ES module because it has a '.js' file extension and '/private/tmp/app-react-vite-91cz/package.json' contains "type": "module".
To treat it as a CommonJS script, rename it to use the '.cjs' file extension.
ReferenceError: module is not defined in ES module scope
This file is being treated as an ES module because it has a '.js' file extension and '/private/tmp/app-react-vite-91cz/package.json' contains "type": "module".
To treat it as a CommonJS script, rename it to use the '.cjs' file extension.
    at file:///private/tmp/app-react-vite-91cz/postcss.config.js?t=1744828179140:1:1
    at ModuleJob.run (node:internal/modules/esm/module_job:195:25)
    at async ModuleLoader.import (node:internal/modules/esm/loader:337:24)
    at async req$3 (file:///private/tmp/app-react-vite-91cz/node_modules/vite/dist/node/chunks/dep-BuM4AdeL.js:11652:13)
    at async Object.search (file:///private/tmp/app-react-vite-91cz/node_modules/vite/dist/node/chunks/dep-BuM4AdeL.js:11394:23)
  Plugin: vite:css
  File: /private/tmp/app-react-vite-91cz/src/index.css
11:59:43 PM [vite] (client) Pre-transform error: Failed to load PostCSS config (searchPath: /private/tmp/app-react-vite-91cz): [ReferenceError] module is not de
fined in ES module scope
This file is being treated as an ES module because it has a '.js' file extension and '/private/tmp/app-react-vite-91cz/package.json' contains "type": "module".
To treat it as a CommonJS script, rename it to use the '.cjs' file extension.
ReferenceError: module is not defined in ES module scope
This file is being treated as an ES module because it has a '.js' file extension and '/private/tmp/app-react-vite-91cz/package.json' contains "type": "module".
To treat it as a CommonJS script, rename it to use the '.cjs' file extension.
    at file:///private/tmp/app-react-vite-91cz/postcss.config.js?t=1744828179140:1:1
    at ModuleJob.run (node:internal/modules/esm/module_job:195:25)
    at async ModuleLoader.import (node:internal/modules/esm/loader:337:24)
    at async req$3 (file:///private/tmp/app-react-vite-91cz/node_modules/vite/dist/node/chunks/dep-BuM4AdeL.js:11652:13)
    at async Object.search (file:///private/tmp/app-react-vite-91cz/node_modules/vite/dist/node/chunks/dep-BuM4AdeL.js:11394:23)
  Plugin: vite:css
  File: /private/tmp/app-react-vite-91cz/src/index.css
^C

---

status = process exited
cwd = /private/tmp/app-react-vite-91cz